# driftwatch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/driftwatch/: __init__.py  cli.py  db.py  models.py
src/driftwatch/collectors/: __init__.py  aws.py  base.py  demo.py  docker.py  kubernetes.py  terraform.py
src/driftwatch/engine/: __init__.py  anomaly.py  differ.py  predictor.py
src/driftwatch/web/: __init__.py  app.py  routes.py
src/driftwatch/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_anomaly.py  test_api.py  test_cli.py  test_collectors.py  test_db.py  test_differ.py  test_models.py  test_predictor.py
