[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Infrastructure drift detector with predictive analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "DriftWatch Contributors" }]
keywords = ["infrastructure", "drift", "detection", "devops", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",

    "rich>=13.0",
    "pydantic>=2.0",
    "humanize>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
driftwatch = "driftwatch.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/driftwatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=driftwatch --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["driftwatch"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
